[package]
name = "reduce"
version = "0.1.2"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Fold an iterator without an initial value"
repository = "https://github.com/dtolnay/reduce"
documentation = "https://github.com/dtolnay/reduce"
keywords = ["iterator", "fold"]
readme = "README.md"

[badges]
travis-ci = { repository = "dtolnay/reduce" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
