[package]
name = "reduce"
version = "0.1.4" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Fold an iterator without an initial value"
documentation = "https://docs.rs/reduce"
edition = "2018"
keywords = ["iterator", "fold"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/reduce"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
